added blog post

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,8 +36,8 @@ import Layout from '../layouts/BlogPost.astro';
       <li>Flexibility in application</li>
     </ul>
     So what does this mean? I could talk all day about this sorta stuff, but I'll save it as
-    as a reason to populate my <a href="/blog">blog</a>. The tldr is: web development ended
-    up being a great fit for my personality and work-style, and cloud technology is even MORE AWESOME
+    a reason to populate my <a href="/blog">blog</a>. The tldr is: web development ended
+    up being a great fit for my work-style, and cloud technology is even MORE AWESOME
     for how accessible it makes the entire process of deploying a full stack application for anyone getting
     into web and/or platform development.
   </p>
